# tap-tursoapi

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml  tox.ini
.github/: dependabot.yml  renovate.json5
.github/workflows/: build.yml  test.yml
tap_tursoapi/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: test_core.py
